--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 	<script src="./scripts.js" type="text/javascript"></script>
 	<script>
 		function updateIMG() {
-			if (document.getElementById("hero_select").value) {
 				document.getElementById("hero_select_img").src = "http://cdn.dota2.com/apps/dota2/images/heroes/" + document.getElementById("hero_select").value + "_sb.png";
-			} else {
-				document.getElementById("hero_select_img").src = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAAhCAIAAADoCkQZAAAAHElEQVRYhe3BAQ0AAADCoPdPbQ8HFAAAAAAAPBgW8gABCNvYUgAAAABJRU5ErkJggg==";
-			}
 		}
 	</script>
 
@@ -36,7 +32,16 @@
 					</script>
 				</td>
 				<td>
-					<img id="hero_select_img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAAhCAIAAADoCkQZAAAAHElEQVRYhe3BAQ0AAADCoPdPbQ8HFAAAAAAAPBgW8gABCNvYUgAAAABJRU5ErkJggg=="></img>
+					<img id="hero_select_img" src="http://cdn.dota2.com/apps/dota2/images/heroes/antimage_sb.png"></img>
+				</td>
+			</tr>
+			<tr>
+				<td>Result:</td>
+				<td>
+					<select id="result_select">
+						<option value="Win">Win</option>
+						<option value="Loss">Loss</option>
+					</select>
 				</td>
 			</tr>
 			<tr>
@@ -56,7 +61,12 @@
 			</tr>
 		</table>
 	</div>
-	<div class='option'>
+	<div id='view'>
+		<div id="entries">
+			<script type="text/javascript">
+				showLogs();
+			</script>
+		</div>
 	</div>
 	<div id='footer'>
 		Created by
